--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -55,3 +55,5 @@ entries:
     replaces: eclipse-che.v7.72.0
   - name: eclipse-che.v7.74.0
     replaces: eclipse-che.v7.73.0
+  - name: eclipse-che.v7.75.0
+    replaces: eclipse-che.v7.74.0
